fix logo on mobile

--- a/src/components/base/logo/Logo.module.css
+++ b/src/components/base/logo/Logo.module.css
@@ -10,7 +10,6 @@
   display: block;
   height: 100%;
   width: auto;
-  max-width: 100%;
   color: var(--logo-color, var(--blue));
 }
 
